--- a/src/App.css
+++ b/src/App.css
@@ -19,11 +19,15 @@ header {
   width: 100%;
 }
 
+a {
+  text-decoration: none;
+  color: currentColor;
+}
+
 
 .icon {
   padding-left: 10px;
   color: #02b3e4;
-  cursor: pointer;
 }
 
 .icon i, .title {
@@ -32,13 +36,14 @@ header {
 
 .side-bar {
   width: 300px;
+  height: 100vw;
   background-color: #58646d;
   position: absolute;
   color: black;
-  height: 100vw;
   z-index: 9999;
   transform: translate(-300px, 0);
   transition: transform 0.3s ease;
+  overflow-y: scroll;
 }
 
 .side-bar.open {
@@ -49,7 +54,26 @@ header {
   position: absolute;
   top: 10px;
   left: 250px;
-  cursor: pointer;
+  color:  #02b3e4;
+}
+
+.side-bar-container {
+  width: 90%;
+  margin: 50px auto;
+}
+.filter-location {
+  width: 100%;
+  height: 50px;
+}
+
+.list-menu {
+  list-style: none;
+  padding: 20px;
+}
+
+.list-item {
+  padding: 20px;
+  border-bottom: 1px solid black;
 }
 
 #map {
