--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,14 @@
-
 html, body, main  {
   height: 100%;
+}
+
+.main {
+  width: 100%;
+  height: 100vh;
+} 
+
+body {
+  overflow: hidden;
 }
 
 h1 {
@@ -38,7 +46,7 @@ a {
 }
 
 .side-bar {
-  width: 300px;
+  width: 270px;
   height: 100vw;
   background-color: #58646d;
   position: absolute;
@@ -49,6 +57,11 @@ a {
   overflow-y: scroll;
 }
 
+.side-bar h3 {
+  color: #fff;
+  padding-left: 10px;
+}
+
 .side-bar.open {
   transform: translate(0, 0);
 }
@@ -56,30 +69,34 @@ a {
 .close-icon {
   position: absolute;
   top: 10px;
-  left: 250px;
+  left: 210px;
   color:  #02b3e4;
 }
 
 .side-bar-container {
-  width: 90%;
-  margin: 50px auto;
+  width: 100%;
+  margin: 25px auto;
 }
 .filter-location {
   width: 100%;
   height: 50px;
+  padding-left: 10px;
 }
 
 .list-menu {
   list-style: none;
-  padding: 20px;
+  padding: 0;
 }
 
 .list-item {
   padding: 20px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #939090;
+  font-size: 14px;
+  color: antiquewhite;
 }
 
 #map {
-  width: 100vw;
-  height: 100vw;
+  margin-top: 70px;
+  width: 100%;
+  height: calc(100% - 90px);
 }
