--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-html, body, main  {
+body  {
   height: 100%;
 }
 
@@ -18,11 +18,9 @@ h1 {
 
 header {
   display: flex;
-  position: fixed;
   background: #1c262f;
   color: #fff;
   height: 70px;
-  z-index: 999;
   width: 100%;
 }
 
@@ -46,8 +44,10 @@ a {
 }
 
 .side-bar {
+  position: absolute;
+  top: 70px;
   width: 270px;
-  height: 100vw;
+  height: calc(100% - 125px);;
   background-color: #58646d;
   position: absolute;
   color: black;
@@ -55,6 +55,7 @@ a {
   transform: translate(-300px, 0);
   transition: transform 0.3s ease;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .side-bar h3 {
@@ -96,7 +97,12 @@ a {
 }
 
 #map {
-  margin-top: 70px;
   width: 100%;
-  height: calc(100% - 90px);
+  height: calc(100% - 140px);
+}
+
+footer {
+  width: 100%;
+  height: 70px;
+  background-color: #1c262f;
 }
