--- a/src/App.css
+++ b/src/App.css
@@ -35,9 +35,11 @@ a {
 
 
 .icon {
-  padding-left: 10px;
+  margin-left: 10px;
   color: #02b3e4;
+  cursor: pointer;
 }
+
 
 .icon i, .title {
   line-height: 2;
@@ -94,6 +96,11 @@ a {
   border-bottom: 1px solid #939090;
   font-size: 14px;
   color: antiquewhite;
+  cursor: pointer;
+}
+
+.list-item:hover {
+  background-color: black;
 }
 
 #map {
@@ -104,5 +111,8 @@ a {
 footer {
   width: 100%;
   height: 70px;
+  padding: 20px 0;
   background-color: #1c262f;
+  text-align: center;
+  color: #fff;
 }
