--- a/src/App.css
+++ b/src/App.css
@@ -28,12 +28,6 @@ header {
   width: 100%;
 }
 
-a {
-  text-decoration: none;
-  color: currentColor;
-}
-
-
 .icon {
   margin-left: 10px;
   color: #02b3e4;
@@ -105,14 +99,18 @@ a {
 
 #map {
   width: 100%;
-  height: calc(100% - 140px);
+  height: calc(100% - 150px);
 }
 
 footer {
   width: 100%;
-  height: 70px;
-  padding: 20px 0;
+  height: 80px; 
   background-color: #1c262f;
   text-align: center;
   color: #fff;
+}
+
+footer span {
+  display: block;
+  padding: 10px 0
 }
